@startuml

title __GAME_BOARD_EVENTS's Class Diagram__\n

  namespace common {
    namespace events {
      namespace game_board_events {
        abstract class common.events.game_board_events.GameBoardEvent {
            + getDTO()
            ~ GameBoardEvent()
        }
      }
    }
  }
  

  namespace common {
    namespace events {
      namespace game_board_events {
        class common.events.game_board_events.GameBoardSetEvent {
            - eventID : int
            - numberOfMap : int
            + GameBoardSetEvent()
            + toString()
        }
      }
    }
  }
  

  common.events.game_board_events.GameBoardEvent .up.|> common.events.ModelEvent
  common.events.game_board_events.GameBoardEvent o-- common.dto_model.GameBoardDTO : gameBoard
  common.events.game_board_events.GameBoardSetEvent -up-|> common.events.game_board_events.GameBoardEvent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
